syntax = "proto3";

package flipdot;

service Flipdot {
    rpc GetInfo (GetInfoRequest) returns (GetInfoResponse);
    rpc Draw (DrawRequest) returns (DrawResponse);
    rpc Test (TestRequest) returns (TestResponse);
    rpc Light (LightRequest) returns (LightResponse);
}

message GetInfoRequest {
}

message GetInfoResponse {
    message SignInfo {
        string name = 1;
        uint32 width = 2;
        uint32 height = 3;
    }
    Error error = 1;
    repeated SignInfo signs = 2;
}

message Error {
    int32 code = 1; // Error code. 0 means success
    string message = 2;
}

/*
 * Draw
 */

message DrawRequest {
    string sign = 1; // ID of the sign to draw on
    repeated bool image = 2; // Flattened image C-style 2D array
}

message DrawResponse {
    Error error = 1;
}

/*
 * Test
 */

message TestRequest {
    enum Action {
        UNSPECIFIED = 0;
        START = 1;
        STOP = 2;
    }
    Action action = 1;
}

message TestResponse {
    Error error = 1;
}

/*
 * Light
 */

message LightRequest {
    enum Status {
        UNSPECIFIED = 0;
        ON = 1;
        OFF = 2;
    }
    Status status = 1;
}

message LightResponse {
    Error error = 1;
}
